<resources>
    <string name="app_name">ProjetoAndroidFinal</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="register_name">Name</string>
    <string name="register">Register</string>
    <string name="btn_data">Data</string>
    <string name="edit_name">Edit Name</string>
    <string name="btn_edit">Edit</string>
    <string name="login_user">User</string>
    <string name="login_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="keep_logged_in">Keep Logged In?</string>
    <string name="start_register_users">Start register users...</string>
    <string name="btn_here">HERE</string>
    <string name="lbl_version">Version:</string>
    <string name="version_number">Version Number</string>
    <string name="fabio_salazar_barbosa_da_silva">Fabio Salazar Barbosa da Silva</string>
    <string name="developer">Developer:</string>
    <string name="data_name">Name</string>
    <string name="menu_register">Register</string>
    <string name="menu_data">Data</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
</resources>
